Fixed CHF alignment issue

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -107,6 +107,7 @@ svg {
 
 			.number, .percent {
 				text-align: right;
+				white-space: pre;
 			}
 		}
 		
